- use J8+ compatible API for path access to avoid samsung J11 ART issue